# pico-host-sdl

./: CMakeLists.txt  README.md  pico_sdk_import.cmake  post_init.cmake  sd_card.c  sdl_audio.c  sdl_timer.c  sdl_video.c
cmake/: FindSDL2_image.cmake
extras_import/: CMakeLists.txt
include/pico/: audio_i2s.h  audio_pwm.h  pico_host_sdl.h  scanvideo.h
